# kaff-GUI-API

./: .editorconfig  .env.example  .env.railway  .gitignore  .pre-commit-config.yaml  .railwayignore  CHANGELOG.md  DEPLOYMENT.md  Makefile  Procfile  RAILWAY_MOBILE_FIX.md  README.md  commitlint.config.js  manage.py  nixpacks.toml  package-lock.json  package.json  pyproject.toml  railway.toml  requirements.txt
.husky/: pre-commit
apps/cages/: admin.py  apps.py  filters.py  models.py  serializers.py  services.py  urls.py  views.py
apps/cages/migrations/: 0001_initial.py
apps/common/: apps.py  enums.py  exceptions.py  managers.py  models.py  pagination.py  permissions.py  urls.py  views.py
apps/common/tests/: __init__.py  test_dashboard.py
apps/couples/: admin.py  apps.py  filters.py  models.py  serializers.py  services.py  urls.py  views.py
apps/couples/migrations/: 0001_initial.py
apps/pigeons/: admin.py  apps.py  filters.py  models.py  serializers.py  services.py  urls.py  views.py
apps/pigeons/migrations/: 0001_initial.py
apps/reproductions/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
apps/reproductions/migrations/: 0001_initial.py
apps/sorties/: admin.py  apps.py  filters.py  models.py  serializers.py  services.py  urls.py  views.py
apps/sorties/migrations/: 0001_initial.py
apps/users/: admin.py  apps.py  managers.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
apps/users/services/: auth_flow.py  challenge.py  encryption.py  keypair.py  totp.py
apps/users/tests/: conftest.py  test_auth_flow.py
config/: __init__.py  admin.py  asgi.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py  testing.py
docs/: ARCHITECTURE.md
docs/adr/: ADR-001-stack-choices.md
docs/api/: openapi-schema.json  openapi-schema.yaml  postman-collection.json
scripts/: create_superuser.py  generate_api_docs.py  generate_secrets.py
tests/: conftest.py
